including the drink type details to drink page

--- a/angularapp/src/app/components/drinks/edit-drink/edit-drink.component.html
+++ b/angularapp/src/app/components/drinks/edit-drink/edit-drink.component.html
@@ -1,8 +1,10 @@
 <div class="py-4 bg-body-tertiary">
   <div class="container my-3">
-    <h1 class="mb-3">Update Drink</h1>
+    <div>
+      <h1 class="mb-3">Update Drink</h1>
+    </div>
     <form #form="ngForm" class="row" (ngSubmit)="updateDrink()">
-      <div class="col-6">
+      <div class="col-sm-6">
         <div class="mb-3">
           <label for="id" class="form-label">ID</label>
           <input type="text" class="form-control" id="id" name="id" [(ngModel)]="updateDrinkRequest.id" disabled readonly>
@@ -13,7 +15,7 @@
         </div>
         <div class="mb-3">
           <label for="description" class="form-label">Description</label>
-          <input type="text" class="form-control" id="description" name="description" [(ngModel)]="updateDrinkRequest.description">
+          <textarea class="form-control" id="description" name="description" [(ngModel)]="updateDrinkRequest.description"></textarea>
         </div>
         <div class="mb-3">
           <label for="dateCreated" class="form-label">Date Created</label>
@@ -21,20 +23,36 @@
         </div>
         <div class="mb-3 form-check form-switch">
           <label for="isActive" class="form-label">Active</label>
-          <input class="form-control form-check-input" type="checkbox" role="switch" id="isActive" name="isActive" [(ngModel)]="updateDrinkRequest.isActive">
+          <input class="form-control form-check-input active-switch" type="checkbox" role="switch" id="isActive" name="isActive" [(ngModel)]="updateDrinkRequest.isActive">
         </div>
-        <button type="submit" class="btn btn-primary">Save</button>
-        <button type="button" id="deleteBtn" data-bs-toggle="modal" data-bs-target="#deleteConfirmModal" class="btn btn-danger mx-1">Delete</button>
-        <button type="button" routerLink="/drinks" class="btn btn-secondary">Back</button>
       </div>
-      <div class="col-6">
+      <div class="col-sm-6">
         <div class="mb-3">
-          <img [src]="updateDrinkRequest.image" alt="Image" class="form-label row px-3"/>
-          <label for="type" class="form-label">Image</label>
+          <label for="type" class="form-label">Current Image</label>
+          <img [src]="updateDrinkRequest.image" alt="Image" class="form-label row mx-auto"/>
+          <label for="type" class="form-label">Image Update</label>
           <div class="input-group">
             <input type="file" accept="image/jpeg, image/png, image/gif" class="form-control" id="imageFile" aria-label="Upload" (change)="onChangeFile($event)">
             <button class="btn btn-outline-success" type="button" id="imageUpdateBtn" (click)="confirmImageUpdate()">Update</button>
           </div>
+        </div>
+      </div>
+
+      <div class="col-sm-12">
+        <div class="mb-3">
+          <label for="types" class="form-label">Drink Types</label>
+          <ul class="list-group list-group-horizontal">
+            <li *ngFor="let type of types" class="list-group-item list-group-item-custom list-group-item-action"
+              (click)="updateType(type)" [ngClass]="{ 'active' : hasType(type) }">
+              {{type.name}}
+
+            </li>
+          </ul>
+        </div>
+        <div class="mb-3 btn-group">
+          <button type="submit" class="btn btn-primary">Save</button>
+          <button type="button" id="deleteBtn" data-bs-toggle="modal" data-bs-target="#deleteConfirmModal" class="btn btn-danger mx-1">Delete</button>
+          <button type="button" routerLink="/drinks" class="btn btn-secondary">Back</button>
         </div>
       </div>
     </form>
