--- a/angularapp/src/app/app.component.html
+++ b/angularapp/src/app/app.component.html
@@ -6,7 +6,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto ms-3 mb-lg-0">
           <!--Nav-->
           <li class="nav-item">
             <a class="nav-link active" routerLink="drinks">Drinks</a>
@@ -14,8 +14,8 @@
 
         </ul>
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <input class="form-control form-control-search me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-secondary" type="submit">Search</button>
         </form>
       </div>
     </div>
