--- a/angularapp/src/app/app.component.html
+++ b/angularapp/src/app/app.component.html
@@ -1,12 +1,12 @@
 <header data-bs-theme="dark">
-  <nav class="navbar navbar-expand-lg border-bottom border-bottom-dark bg-dark" data-bs-theme="dark">
+  <nav class="navbar navbar-expand-sm border-bottom border-bottom-dark bg-dark" data-bs-theme="dark">
     <div class="container">
       <a class="navbar-brand" routerLink="">Jei's Home Cafe</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto ms-3 mb-lg-0">
+        <ul class="navbar-nav me-auto ms-3 me-3 mb-lg-0">
           <!--Nav-->
           <li class="nav-item">
             <a class="nav-link active" routerLink="drinks">Drinks</a>
