--- a/angularapp/src/app/components/drinks/edit-drink/edit-drink.component.html
+++ b/angularapp/src/app/components/drinks/edit-drink/edit-drink.component.html
@@ -21,9 +21,8 @@
           <label for="dateCreated" class="h6 form-label">Date Created</label>
           <input type="text" class="form-control" id="dateCreated" name="dateCreated" date="dd-MM-yyyy" [(ngModel)]="updateDrinkRequest.formattedDateCreated" disabled readonly>
         </div>
-        <div class="mb-3 form-check form-switch">
-          <label for="isActive" class="h6 form-label">Active</label>
-          <input class="form-control form-check-input active-switch" type="checkbox" role="switch" id="isActive" name="isActive" [(ngModel)]="updateDrinkRequest.isActive">
+        <div class="mb-3">
+          <mat-slide-toggle type="checkbox" role="switch" id="isActive" name="isActive" [(ngModel)]="updateDrinkRequest.isActive">Active</mat-slide-toggle>
         </div>
       </div>
       <div class="col-sm-6">
@@ -52,15 +51,9 @@
         <div class="my-5">
           <label for="ingredients" class="h6 form-label">Drink Ingredients</label>
           <div class="input-group">
-            <!--
-              <input class="form-control" list="ingredientDataList" id="ingredientListInput" [(ngModel)]="selectedIngredient.ingredientName" name="ingredientName" placeholder="Type to search...">
+            <input class="form-control" list="ingredientDataList" id="ingredientListInput" [(ngModel)]="selectedIngredient.name" name="ingredientName" placeholder="Type to search...">
             <datalist id="ingredientDataList" name="selectedIngredient">
-              <option *ngFor="let item of ingredientList" [ngValue]="item.ingredientName" >{{item.ingredientName}}</option>
-            </datalist>
-          -->
-            <input class="form-control" list="ingredientDataList" id="ingredientListInput" [(ngModel)]="selectedIngredient.ingredientName" name="ingredientName" placeholder="Type to search...">
-            <datalist id="ingredientDataList" name="selectedIngredient">
-              <option *ngFor="let item of ingredientList" [ngValue]="item.ingredientName" class="datalist-options">{{item.ingredientName}}</option>
+              <option *ngFor="let item of ingredientList" [ngValue]="item.name" class="datalist-options">{{item.name}}</option>
             </datalist>
             <button class="btn btn-outline-secondary" type="button" (click)="addSelectedIngredient(selectedIngredient)">Add</button>
           </div>
@@ -71,9 +64,9 @@
             </thead>
             <tbody>
             <tr *ngFor="let ingredient of updateDrinkRequest.drinkIngredients" >
-              <td>{{ingredient.ingredientName}}</td>
+              <td>{{ingredient.name}}</td>
               <td><input type="text" [value]="ingredient.amount" (input)="setAmount(ingredient, $event)" class="form-control px-1"></td>
-              <td>{{ingredient.unitName}}</td>
+              <td>{{ingredient.unit.name }}</td>
               <td><span class="btn btn-danger btn-sm" type="button" (click)="removeIngredient(ingredient)">Remove</span></td>
             </tr>
            </tbody>
