--- a/angularapp/src/app/app.component.html
+++ b/angularapp/src/app/app.component.html
@@ -11,7 +11,9 @@
           <li class="nav-item">
             <a class="nav-link active" routerLink="drinks">Drinks</a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link active" routerLink="ingredients">Ingredients</a>
+          </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control form-control-search me-2" type="search" placeholder="Search" aria-label="Search">
