--- a/angularapp/src/styles.css
+++ b/angularapp/src/styles.css
@@ -79,3 +79,16 @@
 a {
   color:rgb(72, 128, 66);
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+#isActive label {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
+  font-weight: 500;
+    line-height: 1.2;
+    color: var(--bs-heading-color);
+}
