--- a/angularapp/src/styles.css
+++ b/angularapp/src/styles.css
@@ -92,3 +92,22 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     line-height: 1.2;
     color: var(--bs-heading-color);
 }
+
+.unavailable {
+  color: red !important;
+  text-decoration: line-through;
+}
+
+.unavailable-alert {
+  color:rgb(103 108 104);
+  text-decoration: none !important;
+  font-size: smaller;
+  padding-top: 0px;
+}
+
+.mat-icon.tooltip-icon {
+  height: 16px;
+  width: 16px;
+  font-size: 16px;
+  vertical-align: text-bottom;
+}
